--- a/hotel-booking-app-backend/.env
+++ b/hotel-booking-app-backend/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:eajMUWfmuGQKzQWyUGBpPFQaW/2w/ORywOk3MWb51Pk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://hotel-booking-management-app-ten.vercel.app/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
