--- a/hotel-booking-app-backend/.env
+++ b/hotel-booking-app-backend/.env
@@ -9,11 +9,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=hotel_booking_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=<RAILWAY_HOST>
+DB_PORT=<RAILWAY_PORT>
+DB_DATABASE=<RAILWAY_DB_NAME>
+DB_USERNAME=<RAILWAY_USERNAME>
+DB_PASSWORD=<RAILWAY_PASSWORD>
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
