--- a/hotel-booking-app-backend/.env
+++ b/hotel-booking-app-backend/.env
@@ -9,12 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=<RAILWAY_DB_HOST>
-DB_PORT=<RAILWAY_DB_PORT>
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=hotel_booking_db
-DB_USERNAME=<RAILWAY_DB_USERNAME>
-DB_PASSWORD=<RAILWAY_DB_PASSWORD>
-
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
