--- a/hotel-booking-app-backend/.env
+++ b/hotel-booking-app-backend/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:eajMUWfmuGQKzQWyUGBpPFQaW/2w/ORywOk3MWb51Pk=
 APP_DEBUG=true
 APP_URL=https://hotel-booking-management-app-ten.vercel.app/
+VUE_APP_API_URL=https://hotel-booking-backend.up.railway.app/api
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
