--- a/hotel-booking-app-backend/.env
+++ b/hotel-booking-app-backend/.env
@@ -10,12 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=your_railway_host
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=hotel_booking_db
-DB_USERNAME=railway_user
-DB_PASSWORD=railway_password
-
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
