--- a/hotel-booking-app-backend/.env
+++ b/hotel-booking-app-backend/.env
@@ -9,11 +9,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-MYSQLHOST=mysql.railway.internal
-MYSQLPORT=3306
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
 DB_DATABASE=railway
 DB_USERNAME=root
 DB_PASSWORD=PiekKQXWuZQERMrWXjYdBMVGzdoafGhA
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
