--- a/hotel-booking-app-backend/.env
+++ b/hotel-booking-app-backend/.env
@@ -8,12 +8,13 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+
 DB_CONNECTION=mysql
-DB_HOST=mysql.railway.internal
-DB_PORT=37584
-DB_DATABASE=railway
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=hotel_booking_db
 DB_USERNAME=root
-DB_PASSWORD=PiekKQXWuZQERMrWXjYdBMVGzdoafGhA
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
