add new server link

--- a/hotel-booking-app/.env
+++ b/hotel-booking-app/.env
@@ -1,2 +1,2 @@
 VUE_APP_API_URL="http://localhost:8000"
-VUE_APP_API_URL=https://hotel-booking-backend.up.railway.app/api
+VUE_APP_API_URL=https://hotel_booking_management_app.railway.internal/api
